turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:14: error: type mismatch;
 found   : Int(0)
 required: Array[Int]
     	case 0 =>
             ^Turmite:15: error: type mismatch;
 found   : Int(1)
 required: Array[Int]
     	case 1 => avance()
             ^Turmite:16: error: type mismatch;
 found   : Int(2)
 required: Array[Int]
     	case 2 => gauche()
             ^Turmite:18: error: type mismatch;
 found   : Int(4)
 required: Array[Int]
     	case 4 =>	gauche()
             ^Turmite:21: error: type mismatch;
 found   : Int(8)
 required: Array[Int]
     	case 8 => droite()
             ^